--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.application.name=config-client
 spring.cloud.config.label=master
 spring.cloud.config.profile=dev
 #指明配置服务中心的网址
-spring.cloud.config.uri=http://localhost:8888/ 
+#spring.cloud.config.uri=http://localhost:8888/
+eureka.client.service-url.defaultZone=http://localhost:8889/eureka/
 
