--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.cloud.config.server.git.search-paths=respo
 spring.cloud.config.label=master
 spring.cloud.config.server.git.username=625871407@qq.com
 spring.cloud.config.server.git.password=xiaoxi901218!
+
+eureka.client.service-url.defaultZone=http://localhost:8889/eureka/
