--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.cloud.config.profile=dev
 #spring.cloud.config.uri=http://localhost:8888/
 eureka.client.service-url.defaultZone=http://localhost:8889/eureka/
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=
+spring.rabbitmq.password=
+
