--- a/service-hi/src/main/resources/application.properties
+++ b/service-hi/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8988
 spring.zipkin.base-url=http://localhost:9411
 spring.application.name=service-hi
+
+eureka.client.service-url.defaultZone=http://peer1:8761/eureka/
