--- a/service-hi/src/main/resources/application.properties
+++ b/service-hi/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8988
 spring.zipkin.base-url=http://localhost:9411
 spring.application.name=service-hi
 
-eureka.client.service-url.defaultZone=http://peer1:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8889/eureka/
